--- a/BullCurrency/BullCurrency.csproj
+++ b/BullCurrency/BullCurrency.csproj
@@ -56,6 +56,8 @@
     <Compile Include="MainActivity.cs" />
     <None Include="GettingStarted.Xamarin" />
     <None Include="web.config" />
+    <Compile Include="Models\CurrencyModel.cs" />
+    <Compile Include="Models\DestinationCurrencyModel.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\Model1.cs" />
